fix: center question numbers; wire survey submit to backend

--- a/usersurvey.html
+++ b/usersurvey.html
@@ -59,8 +59,8 @@
         .star-icon { width: 3.5rem; height: 3.5rem; color: #E5E7EB; fill: #E5E7EB; transition: all 0.2s ease; cursor: pointer; }
         .star-icon.active { color: #F6BE00; fill: #F6BE00; }
         
-        .big-number { font-size: 8rem; line-height: 1; font-weight: 900; letter-spacing: -0.05em; }
-        @media (max-width: 768px) { .big-number { font-size: 5rem; margin-bottom: 1rem; } }
+        .big-number { font-size: 8rem; line-height: 1; font-weight: 900; letter-spacing: -0.05em; width: 10rem; text-align: center; }
+        @media (max-width: 768px) { .big-number { font-size: 5rem; margin-bottom: 1rem; width: 7rem; } }
 
         .checkbox-viu { width: 1.5rem; height: 1.5rem; border-radius: 0.3rem; border: 2px solid #9CA3AF; }
         .checkbox-viu:checked { background-color: #F6BE00; border-color: #F6BE00; }
@@ -258,11 +258,11 @@
     </div>
 
     <!-- PAGE: THANK YOU -->
-    <div id="thank-you-page" class="w-full min-h-screen flex flex-col items-center justify-center bg-white relative hidden-page">
+    <div id="thank-you-page" class="w-full min-h-screen flex items-center justify-center bg-white relative hidden-page">
         <div class="absolute top-6 left-6 md:top-10 md:left-10">
             <svg width="50" height="50" viewBox="0 0 100 100" fill="none"><circle cx="50" cy="50" r="45" stroke="#F6BE00" stroke-width="8"/><path d="M40 30 L65 50 L40 70" stroke="#F6BE00" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
         </div>
-        <div class="flex-grow flex flex-col items-center text-center px-6 fade-in">
+        <div class="flex flex-col items-center text-center px-6 fade-in">
             <div class="w-32 h-32 bg-viu-yellow rounded-full flex items-center justify-center mb-10 shadow-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
             </div>
@@ -492,7 +492,7 @@
             goToPage('summary-page', 100);
         }
 
-        function submitSurvey() {
+        async function submitSurvey() {
             const country = document.getElementById('user-country').value || 'Unknown';
             const email = document.getElementById('user-email').value || 'N/A';
             const suggestion = document.getElementById('final-comment').value;
@@ -513,6 +513,26 @@
             let allResponses = JSON.parse(localStorage.getItem('viu_survey_responses') || '[]');
             allResponses.push(responseData);
             localStorage.setItem('viu_survey_responses', JSON.stringify(allResponses));
+            // Non-visual backend POST to record in Firestore
+            try {
+                const payload = {
+                    name: (email && email !== 'N/A') ? email.split('@')[0] : undefined,
+                    email: (email && email !== 'N/A') ? email : undefined,
+                    responses: {
+                        country,
+                        service: serviceVoted,
+                        suggestion,
+                        ratings: questions.map(q => ({ title: q.title, rating: q.rating }))
+                    }
+                };
+                await fetch('/api/survey', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload)
+                });
+            } catch (e) {
+                // silent fail; keep UX unchanged
+            }
 
             goToPage('thank-you-page');
         }
