--- a/index.html
+++ b/index.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=/usersurvey.html" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Redirecting…</title>
-  <script>
-    // Fallback in case meta refresh is blocked
-    window.location.replace('/usersurvey.html');
-  </script>
-  <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
-    .wrap { display:flex; align-items:center; justify-content:center; min-height:100vh; }
-    .card { text-align:center; color:#333; }
-    a { color:#F6BE00; text-decoration:none; border-bottom:2px solid #F6BE00; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VIU Client Satisfaction Survey</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            overflow-x: hidden;
+            background-color: #FAFAFA;
+        }
+        .bg-viu-yellow { background-color: #F6BE00; }
+        .text-viu-yellow { color: #F6BE00; }
+        .hover-bg-viu-dark:hover { background-color: #dca000; }
+        .glow-bg { background: radial-gradient(circle, rgba(246,190,0,0.15) 0%, rgba(255,255,255,0) 70%); }
+        #splash-screen {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;
+            background-image: url('bg.jpg'); background-size: cover; background-position: center; 
+            background-color: #F6BE00; transition: opacity 0.8s ease-in-out, visibility 0.8s;
+        }
+        .fade-out { opacity: 0; visibility: hidden; pointer-events: none; transition: opacity 0.5s ease; }
+    </style>
 </head>
-<body>
-  <div class="wrap">
-    <div class="card">
-      <p>Redirecting to the survey…</p>
-      <p><a href="/usersurvey.html">Click here if you are not redirected</a></p>
+<body class="bg-gray-50 text-gray-800 min-h-screen relative">
+    <div id="splash-screen"></div>
+    <div id="welcome-page" class="w-full min-h-screen flex flex-col relative opacity-0 transition-opacity duration-1000 bg-white">
+        <div class="absolute top-6 left-6 md:top-10 md:left-10">
+            <svg width="50" height="50" viewBox="0 0 100 100" fill="none"><circle cx="50" cy="50" r="45" stroke="#F6BE00" stroke-width="8"/><path d="M40 30 L65 50 L40 70" stroke="#F6BE00" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </div>
+        <div class="flex-grow flex flex-col items-center justify-center px-4">
+            <div class="w-full max-w-3xl flex flex-col items-center text-center glow-bg py-20 rounded-full">
+                <h1 class="text-5xl md:text-6xl font-extrabold tracking-tight leading-tight"><span class="text-black">Shape the</span><br><span class="text-viu-yellow">Viu Experience</span></h1>
+                <p class="mt-6 text-gray-500 text-lg md:text-xl max-w-2xl font-medium">Help us curate the next generation of Asian entertainment.</p>
+                <div class="mt-10 flex flex-col gap-4 w-full max-w-xs">
+                    <a href="usersurvey.html" class="btn border-none bg-viu-yellow hover-bg-viu-dark text-black text-lg font-bold px-8 h-14 rounded-xl shadow-md transform transition hover:scale-105 flex items-center justify-center gap-2 no-underline">Start Survey <i data-lucide="arrow-right" class="w-5 h-5"></i></a>
+                    <a href="admin.html" class="btn bg-gray-50 hover:bg-gray-100 border border-gray-200 text-gray-500 font-semibold h-12 rounded-xl shadow-sm flex items-center justify-center gap-2 no-underline"><i data-lucide="lock" class="w-4 h-4"></i>Admin Access</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            lucide.createIcons();
+            setTimeout(() => {
+                document.getElementById('splash-screen').classList.add('fade-out');
+                setTimeout(() => { document.getElementById('welcome-page').style.opacity = '1'; }, 300);
+            }, 1000);
+        });
+    </script>
 </body>
 </html>
