fix(ui): use root-absolute paths for bg.jpg and chatbot.png so images load under /usersurvey

--- a/usersurvey.html
+++ b/usersurvey.html
@@ -42,7 +42,7 @@
         /* Survey Styles */
         #splash-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;
-            background-image: url('bg.jpg'); background-size: cover; background-position: center; 
+            background-image: url('/bg.jpg'); background-size: cover; background-position: center; 
             background-color: #F6BE00; transition: opacity 0.8s ease-in-out, visibility 0.8s;
         }
 
@@ -277,7 +277,7 @@
     <!-- Chatbot Floating Button (Icon Image) -->
     <div class="fixed bottom-6 right-6 md:bottom-10 md:right-10 z-50">
         <!-- Use "image_d35703.png" as requested -->
-        <img src="chatbot.png" alt="Chat" class="w-16 h-16 cursor-pointer hover:scale-105 transition-transform" onclick="toggleChat()" />
+        <img src="/chatbot.png" alt="Chat" class="w-16 h-16 cursor-pointer hover:scale-105 transition-transform" onclick="toggleChat()" />
     </div>
 
     <!-- Chatbot Modal Overlay (Centered) -->
@@ -299,7 +299,7 @@
             <!-- Body -->
             <div class="chat-body">
                 <div class="chat-bubble-bot">
-                    <img src="chatbot.png" class="chat-avatar" alt="Bot" />
+                    <img src="/chatbot.png" class="chat-avatar" alt="Bot" />
                     <span>Hello, Viu Fam! How can we help?</span>
                 </div>
             </div>
