style(ui): center question numbers with tabular-nums and fixed width for consistent 0110 alignment

--- a/usersurvey.html
+++ b/usersurvey.html
@@ -59,8 +59,8 @@
         .star-icon { width: 3.5rem; height: 3.5rem; color: #E5E7EB; fill: #E5E7EB; transition: all 0.2s ease; cursor: pointer; }
         .star-icon.active { color: #F6BE00; fill: #F6BE00; }
         
-        .big-number { font-size: 8rem; line-height: 1; font-weight: 900; letter-spacing: -0.05em; }
-        @media (max-width: 768px) { .big-number { font-size: 5rem; margin-bottom: 1rem; } }
+        .big-number { font-size: 8rem; line-height: 1; font-weight: 900; letter-spacing: -0.05em; font-variant-numeric: tabular-nums; display: inline-block; width: 10rem; text-align: center; }
+        @media (max-width: 768px) { .big-number { font-size: 5rem; margin-bottom: 1rem; width: 6.5rem; } }
 
         .checkbox-viu { width: 1.5rem; height: 1.5rem; border-radius: 0.3rem; border: 2px solid #9CA3AF; }
         .checkbox-viu:checked { background-color: #F6BE00; border-color: #F6BE00; }
